chore:  mad some improvements to original poc

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ openapi.yml
 # Binary (ignore in root and bin directory, but not cmd directory)
 /terramate-mcp-server
 /bin/terramate-mcp-server
+/bin/tools/
