--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,71 +1,65 @@
+version: "2"
+
 run:
   timeout: 5m
   tests: true
   allow-parallel-runners: true
 
-output:
-  sort-results: true
-
-linters-settings:
-  govet:
-    enable:
-      - shadow
-  gofumpt:
-    extra-rules: false
-  gocyclo:
-    min-complexity: 15
-  goconst:
-    min-len: 3
-    min-occurrences: 3
-  gocritic:
-    enabled-checks:
-      - sloppyReassign
-      - boolExprSimplify
-  revive:
-    rules:
-      - name: var-naming
-      - name: exported
-        arguments: ["checkPrivateReceivers"]
-      - name: errorf
-      - name: blank-imports
-      - name: context-as-argument
-      - name: error-return
-      - name: increment-decrement
-      - name: unexported-return
-  misspell:
-    locale: US
-  dupl:
-    threshold: 150
-
 linters:
-  disable-all: true
+  default: none
   enable:
     - govet
-    - gofumpt
     - revive
     - errcheck
     - staticcheck
-    - gosimple
     - ineffassign
-    - typecheck
     - unused
     - gocyclo
     - goconst
     - nakedret
     - unparam
     - misspell
-    - gocritic
+  settings:
+    govet:
+      enable:
+        - shadow
+    gocyclo:
+      min-complexity: 15
+    goconst:
+      min-len: 3
+      min-occurrences: 3
+    revive:
+      rules:
+        - name: var-naming
+        - name: exported
+          arguments: ["checkPrivateReceivers"]
+        - name: errorf
+        - name: blank-imports
+        - name: context-as-argument
+        - name: error-return
+        - name: increment-decrement
+        - name: unexported-return
+    misspell:
+      locale: US
+  exclusions:
+    rules:
+      - linters: [revive]
+        text: "exported: exported function .* should have comment or be unexported"
+      - linters: [revive]
+        text: "package-comments: should have a package comment"
+      - linters: [revive]
+        path: "types/"
+        text: "var-naming: avoid meaningless package names"
+      - linters: [goconst, gocyclo]
+        path: "_test\\.go"
+
+formatters:
+  enable:
+    - gofumpt
+  settings:
+    gofumpt:
+      extra-rules: false
 
 issues:
-  exclude-use-default: false
   max-issues-per-linter: 0
   max-same-issues: 0
-  exclude-rules:
-    - linters: [revive]
-      text: "exported: exported function .* should have comment or be unexported"
-    - linters: [revive]
-      text: "package-comments: should have a package comment"
-    - linters: [goconst]
-      path: "_test\\.go"
-
-
